dashboard-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: ingress-nginx

spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - backend:
              service:
                name: ingress-nginx-controller
                port: 80
